apps/qbittorrent/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 80
      targetPort: 8080
