apps/qbittorrent/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  ingressClassName: nginx
  rules:
    - host: qbittorrent.jamaguchi.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: http
